--- a/atm.css
+++ b/atm.css
@@ -227,7 +227,7 @@ h1{
 					margin-top:20px;
 					width:82%;
 					height:40px;
-					background-color:red;
+					background-color:red;	
 			}
 			
 			#optdeposit{
@@ -254,8 +254,14 @@ h1{
 			}
 			
 			
-			.table{
+			.tables{
 				background-color:white;
+			}
+			table{
+				background-color:grey;
+				width:100%;
+				text-align:center;
+				
 			}
 			
 
