--- a/forkify.css
+++ b/forkify.css
@@ -279,7 +279,7 @@ ul{
 	float:left;
 }
 .right-foot{
-	background-color:#f2f2f2;
+	background-color:#faf9f7;
 	padding-bottom:4.5px;
 	border-radius:0px 0px 8px 0px;
 	width:65%;
