--- a/forkify.css
+++ b/forkify.css
@@ -3,7 +3,7 @@ body{
 		width:1200px;
 		margin-left:auto;
 		margin-right:auto;
-		//background-repeat:no-repeat;
+		background-attachment: fixed;
 		font-family: 'Nunito Sans', sans-serif;
 }
 .container{
@@ -73,7 +73,7 @@ body{
 		background-color:white;
 		overflow:hidden;
 		width:35%;
-		//height:935px;
+		/*height:935px;*/
 		float:left;
 		position:relative;
 		border-radius:8px 8px 8px 8px;
@@ -84,11 +84,14 @@ body{
 	.item{
 		width:55px;
 		padding:px;
-		margin-top:15px;
-		border-radius:38px;
+		height:58px;
+		border-radius:50px;
+		margin:auto;
 	}
 	.pic{
 		float:left;
+		margin-top:10px;
+		border-radius:38px;
 		margin-left:8px;
 		margin-right:6px;
 	}
@@ -108,11 +111,12 @@ body{
 	}
 	.listhead{
 		color:#de745f;
-		width:200px;
+		width:270px;
 		white-space:nowrap;
 		overflow:hidden;
 		text-overflow:ellipsis;
-		margin-bottom:0px;
+		margin-top:10px;
+		margin-bottom:10px;
 	}
 	.mainbar{
 		background-color:white;
@@ -192,8 +196,8 @@ body{
 	}
 	.dec{
 			color:grey;
-			margin-top:px;
-			margin-bottom:px;
+			margin-top:12px;
+			margin-bottom:12px;
 	}
 	.first{
 		padding:12px;	
@@ -273,6 +277,7 @@ ul{
 	list-style:none;
 	padding:0PX;
 }
+
 .left-foot{
 	background-color:white;
 	width:35%;
