--- a/restaurent.css
+++ b/restaurent.css
@@ -26,7 +26,7 @@ button{
     background-color: aliceblue;
 }
 .main-display{
-    background-color: antiquewhite;
+    background-color:;
     padding: 6px;
 }
 .main-display::after{
@@ -35,13 +35,13 @@ button{
     clear: both;
 }
 .items-list{
-    background-color: aquamarine;
+    background-color:;
     width: 65%;
     float: left;
 
 }
 .item{
-    background-color: coral;
+    background-color:gainsboro;
     margin-top: 5px;
     margin-left: 4px;
     text-align: center;
@@ -49,15 +49,16 @@ button{
     height:110px ;
     float: left;
     width: 24%;
+    border-bottom: 5px solid blue;
     /* height: 162px; */
 }
 .orders-list{
-    background-color:cadetblue;
+    background-color:gainsboro;
     width: 35%;
-    /* margin-top: 5px; */
+    margin-top: 5px;
     padding: 5px;
     height: 345px;
-    float: left;
+    float: right;
 }
 .orders-list::after{
     content: "";
@@ -102,3 +103,23 @@ h4{
 .itemname{
     width: 128px;
 }
+.bill-bottom{
+    float: left;
+    /* position: relative;
+    position: fixed;
+    bottom: 0px;
+    top: 250px; */
+    width: 100%;
+    position: relative;
+    bottom: px;
+}
+.orders{
+    background-color:;
+    width: 100%;
+    height: 222px;
+    overflow: scroll;
+}
+.clear{
+    float: right;
+}
+
