--- a/forkify.css
+++ b/forkify.css
@@ -226,9 +226,10 @@ body{
        height: 345px;
 		clear:both;
 		color:grey;
-		overflow:hidden;
+		overflow:scroll;
 		background-color:#f2f2f2; 
 	}
+	
 	.container{
 		height:971.7px;
 	}
