--- a/digiency.css
+++ b/digiency.css
@@ -61,40 +61,14 @@ button:hover {
     color: #FF5300;
     font-weight: 400;
 }
-
-.service::before {
-    content: "_____";
-    height: 2px;
-    width: 130px;
-}
-
-.service::after {
-    content: "_____";
-    height: 2px;
-    width: 130px;
-}
-
 .to-do {
     font-weight: 600;
 }
 
-/* .service:before{
-    content:" ";
-    display: block;
-    height: 2px;
-    width: 130px;
-    margin-top: 80px;
-    /* position: absolute; */
-/* top: 0px; */
-/* left: 0; 
-    bottom: 0px;
-    background: red;
-  } */
 .services-head {
     margin: auto;
     text-align: center;
-    /* background-color: aquamarine;
-    width: 50%; */
+
 }
 
 .service-content {
@@ -115,8 +89,6 @@ button:hover {
     margin-top: 20px;
     margin-left: 11px;
     padding: 12px;
-    /* border-style: solid;
-    border-width: 1px; */
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
@@ -131,10 +103,11 @@ h4 {
 .num {
     float: right;
     font-weight: 600;
-    /* background-color: aquamarine; */
     font-size: 64px;
     color: #EFEFEF;
 }
-.picture{
-    /* margin-top: 2px; */
+.dash{
+    width: 55px;
+    border: 1px solid #FF5300;
+    display: inline-block;
 }
